# pysignet

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  publish.yml
benchmarks/: README.md  jit_vs_eager.py
docs/: api-combined-loss.md  api-compiled-expression.md  api-compilers.md  api-functions.md  api-logic-loss.md  api-tnorms.md  api.md  concepts.md  custom-compilers.md  index.md
notebooks/: Basic Usage.ipynb  Combining Multiple Losses.ipynb  Custom Compilers.ipynb  MNIST Addition.ipynb  MNIST.ipynb  Multi-Modal Predicates.ipynb  Partial Binding.ipynb  README.md  Semi-Supervised MNIST.ipynb  Symmetry Constraints.ipynb  Triplet Learning.ipynb
scripts/: developer-setup.sh  install-hooks.sh
src/logic_as_loss/: __init__.py  consistency.py  core.py  loss.py  tnorms.py
src/logic_as_loss/compilation/: tnorm_compiler.py
src/logic_as_loss/tnorms/: base.py  godel.py  lukasiewicz.py  product.py
src/pysignet/: __init__.py  api.py  batch_handler.py  combined_loss.py  consistency.py  context.py  loss.py  multiclass.py  predicate.py  symbols.py
src/pysignet/compilation/: __init__.py  arity.py  base.py  compiled_expression.py  ltu_compiler.py  module_utils.py  tnorm_compiler.py
src/pysignet/eval/: __init__.py  boolean.py  checker.py  display.py  report.py
src/pysignet/fol/: __init__.py  binding.py  extraction.py
src/pysignet/logic/: __init__.py  binding.py  expansion.py  extraction.py  quantifier.py  variable.py
src/pysignet/tnorms/: __init__.py  base.py  godel.py  lukasiewicz.py  mixed.py  product.py
tests/: conftest.py  test_arity_validation.py  test_basic_operations.py  test_batch_handler.py  test_combined_loss.py  test_compilation_api.py  test_compiled_expression_jit.py  test_consistency_checker.py  test_consistency_refactor.py  test_constants.py  test_coverage_gaps.py  test_custom_modules.py  test_edge_cases.py  test_eval_metrics.py  test_evaluation_context.py  test_fol_auto_batch.py  test_fol_binding.py  test_fol_compilation.py  test_fol_constant_passing.py  test_fol_constants.py  test_fol_expansion.py  test_fol_mixed_args.py  test_fol_nested_quantifiers.py  test_fol_partial_binding.py  test_fol_predicate_application.py  test_fol_quantifier.py  test_fol_quantifier_compilation.py  test_fol_variable.py  test_fol_variable_extraction.py  test_gradients.py  test_inputs.py  test_jupyter_display.py  test_log_fusion.py  test_log_space_batch_loss.py  test_logic_loss.py  test_logic_loss_quantify.py  test_loss.py  test_loss_postprocessing.py  test_ltu_compiler.py  test_module_utils.py  (+12 more)
tests/compilation/: test_arity_validation.py  test_compilation_api.py  test_custom_modules.py  test_ltu_compiler.py  test_module_utils.py  test_tnorm_compiler.py
tests/logic/: test_fol_auto_batch.py  test_fol_binding.py  test_fol_compilation.py  test_fol_constant_passing.py  test_fol_expansion.py  test_fol_mixed_args.py  test_fol_module_variable_index.py  test_fol_nested_quantifiers.py  test_fol_partial_binding.py  test_fol_predicate_application.py  test_fol_quantifier.py  test_fol_quantifier_compilation.py  test_fol_variable.py  test_fol_variable_extraction.py
tests/tnorms/: test_mixed.py  test_r_product.py  test_s_product.py  test_tnorms.py
