[project]
name = "pysignet"
version = "0.2.0"
description = "A library for integrating symbolic logic with neural networks"
authors = [
    {name = "Vivek Srikumar",email = "svivek@cs.utah.edu"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "sympy (>=1.14.0,<2.0.0)",
    "numpy (>=2.4.0,<3.0.0)"
]
license = "MIT"

[tool.poetry]
packages = [{include = "pysignet", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^6.0.0"
black = "^25.12.0"
flake8 = "^7.3.0"
mypy = "^1.14.1"
pylint = "^4.0.4"
radon = "^6.0.1"
notebook = "^7.5.3"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/pysignet",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=95",
    "-v"
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
no_implicit_reexport = true
warn_unreachable = true
strict = true
mypy_path = "src"
namespace_packages = true

[[tool.mypy.overrides]]
module = "sympy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pysignet.*"
ignore_missing_imports = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
